syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message LunchBoxData {
	map<uint32, uint32> slot_material_map = 1;
}
