syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message LunchBoxWidgetItem {
	uint32 widgetSlot = 1;
	uint32 slotItemId = 2;
}
