syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "LunchBoxWidget.proto";

message SetUpLunchBoxWidgetReq {
	LunchBoxWidget req = 1;
}
