syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "LunchBoxWidget.proto";

message SetUpLunchBoxWidgetRsp {
	LunchBoxWidget rsp = 2;
}
